@@ -1,3 +1,8 @@
+2014-10-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+	* tools/build-register-db.pl, tools/device-help.pl,
+	  tools/device-manager.pl:
+	  Adapted to the modified px structure.
+
 2014-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
 	* tools/device-manager.pl: bugfix
 
